--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
         <meta name="description" content="yunimaのプロフィールページ">
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width">
+        <script>
+            //getScreenSize();
+
+            //let width = screen.availWidth;
+            //if (width <= 450){
+                //var fontSizeOfP = document.getElementsByTagName('p').style.fontSize = 500 + "%";
+                //fontSizeOfP = "500%";
+            //}
+        </script>
     </head>
     <body>
         <div class="bgimage">
@@ -39,8 +49,7 @@
                 </div>
                 
                 <div class="item-big2">
-                    <p>mastodonのサーバー、<a href="https://social.vivaldi.net/@yunima">vivaldi social</a>のアカウントです。</p>
-                    <p>交流を主目的としています。</p>
+                    <p>mastodonのサーバー、<a href="https://social.vivaldi.net/@yunima">vivaldi social</a>のアカウントです。交流を主目的としています。</p>
                 </div>
                 
                 <div class="item">
@@ -56,13 +65,11 @@
                 </div>
 
                 <div class="item-big1">
-                    <p>mastodonの美容サーバー、<a href="https://cosmedn.net/@grimoa_blue">cosmedn.net</a>のアカウントです。</p>
-                    <p>美容についてつぶやいています。</p>
+                    <p>mastodonの美容サーバー、<a href="https://cosmedn.net/@grimoa_blue">cosmedn.net</a>のアカウントです。美容についてつぶやいています。</p>
                 </div>
 
                 <div class="item-big2">
-                    <p>本好きが集まるSNS、<a href="https://booklog.jp/users/junojuly9">ブクログ</a>のアカウントです。</p>
-                    <p>読書記録をつけています。</p>
+                    <p>本好きが集まるSNS、<a href="https://booklog.jp/users/junojuly9">ブクログ</a>のアカウントです。読書記録をつけています。</p>
                 </div>
 
                 <div class="item">
