--- a/index.html
+++ b/index.html
@@ -38,53 +38,49 @@
             </div>
 
             <div class="link">
-                <div class="item">
+                <div class="item-picture">
                     <a href="https://www.instagram.com/grimoa_blue">
                         <img src="Instagram_Glyph_Gradient.png" alt="Instagram @grimoa_blue">
                     </a>
                 </div>
-                <div class="item-big1">
+                <div class="item-big">
                     <p><a href="https://www.instagram.com/grimoa_blue">Instagram</a>のアカウントです。</p>
                     <p>日常を投稿しています。</p>
                 </div>
                 
-                <div class="item-big2">
-                    <p>mastodonのサーバー、<a href="https://social.vivaldi.net/@yunima">vivaldi social</a>のアカウントです。交流を主目的としています。</p>
-                </div>
-                
-                <div class="item">
+                <div class="item-picture">
                     <a href="https://social.vivaldi.net/@yunima">
                         <img src="vivaldi_logo_dark.png" alt="vivaldi social @yunima" class="vivaldi">
                     </a>
                 </div>
+                <div class="item-big">
+                    <p>mastodonのサーバー、<a href="https://social.vivaldi.net/@yunima">vivaldi social</a>のアカウントです。交流を主目的としています。</p>
+                </div>
 
-                <div class="item">
+                <div class="item-picture">
                     <a href="https://cosmedn.net/@grimoa_blue">
                         <img src="Mastodon_Logotype_(Simple).svg.png" alt="cosmedn.net @grimoa_blue">
                     </a>
                 </div>
-
-                <div class="item-big1">
+                <div class="item-big">
                     <p>mastodonの美容サーバー、<a href="https://cosmedn.net/@grimoa_blue">cosmedn.net</a>のアカウントです。美容についてつぶやいています。</p>
                 </div>
 
-                <div class="item-big2">
-                    <p>本好きが集まるSNS、<a href="https://booklog.jp/users/junojuly9">ブクログ</a>のアカウントです。読書記録をつけています。</p>
-                </div>
-
-                <div class="item">
+                <div class="item-picture">
                     <a href="https://booklog.jp/users/junojuly9">
                         <img src="book.png" alt="ブクログ @junojuly9">
                     </a>
                 </div>
+                <div class="item-big">
+                    <p>本好きが集まるSNS、<a href="https://booklog.jp/users/junojuly9">ブクログ</a>のアカウントです。読書記録をつけています。</p>
+                </div>
 
-                <div class="item">
+                <div class="item-picture">
                     <a href="https://github.com/yuni-tsuki">
                         <img src="github-mark.png" alt="Github @yuni-tsuki">
                     </a>
                 </div>
-
-                <div class="item-big1">
+                <div class="item-big">
                     <p><a href="https://github.com/yuni-tsuki">Github</a>です。</p>
                     <p>制作物を投稿しています。</p>
                 </div>
