--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
                     <p><a href="https://www.instagram.com/grimoa_blue">Instagram</a>のアカウントです。</p>
                     <p>日常を投稿しています。</p>
                 </div>
+
+                <div class="item-picture">
+                    <a href="https://misskey.dev/@yunima">
+                        <img src="misskey_icon.png" alt="misskey.dev @yunima">
+                    </a>
+                </div>
+                <div class="item-big">
+                    <p><a href="https://misskey.dev/@yunima">Misskey.dev</a>のアカウントです。yunimaのメインアカウントです。</p>
+                </div>
                 
                 <div class="item-picture">
                     <a href="https://social.vivaldi.net/@yunima">
@@ -54,7 +63,7 @@
                     </a>
                 </div>
                 <div class="item-big">
-                    <p>mastodonのサーバー、<a href="https://social.vivaldi.net/@yunima">vivaldi social</a>のアカウントです。交流を主目的としています。</p>
+                    <p>mastodonのサーバー、<a href="https://social.vivaldi.net/@yunima">vivaldi social</a>のアカウントです。サブアカウントとして使用しています。</p>
                 </div>
 
                 <div class="item-picture">
