--- a/index.html
+++ b/index.html
@@ -7,15 +7,6 @@
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width">
-        <script>
-            //getScreenSize();
-
-            //let width = screen.availWidth;
-            //if (width <= 450){
-                //var fontSizeOfP = document.getElementsByTagName('p').style.fontSize = 500 + "%";
-                //fontSizeOfP = "500%";
-            //}
-        </script>
     </head>
     <body>
         <div class="bgimage">
@@ -58,12 +49,12 @@
                 </div>
                 
                 <div class="item-picture">
-                    <a href="https://social.vivaldi.net/@yunima">
+                    <a rel="me" href="https://social.vivaldi.net/@yunima">
                         <img src="vivaldi_logo_dark.png" alt="vivaldi social @yunima" class="vivaldi">
                     </a>
                 </div>
                 <div class="item-big">
-                    <p>mastodonのサーバー、<a href="https://social.vivaldi.net/@yunima">vivaldi social</a>のアカウントです。サブアカウントとして使用しています。</p>
+                    <p>mastodonのサーバー、<a rel="me" href="https://social.vivaldi.net/@yunima">vivaldi social</a>のアカウントです。サブアカウントとして使用しています。</p>
                 </div>
 
                 <div class="item-picture">
