add favicon and edit images file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width">
+        <link rel="icon" href="images/teapot-icon.png" type="image/x-icon" />
     </head>
     <body>
         <div class="bgimage">
@@ -31,7 +32,7 @@
             <div class="link">
                 <div class="item-picture">
                     <a href="https://www.instagram.com/grimoa_blue">
-                        <img src="Instagram_Glyph_Gradient.png" alt="Instagram @grimoa_blue">
+                        <img src="images/Instagram_Glyph_Gradient.png" alt="Instagram @grimoa_blue">
                     </a>
                 </div>
                 <div class="item-big">
@@ -41,7 +42,7 @@
 
                 <div class="item-picture">
                     <a href="https://misskey.dev/@yunima">
-                        <img src="misskey_icon.png" alt="misskey.dev @yunima">
+                        <img src="images/misskey_icon.png" alt="misskey.dev @yunima">
                     </a>
                 </div>
                 <div class="item-big">
@@ -50,7 +51,7 @@
                 
                 <div class="item-picture">
                     <a rel="me" href="https://social.vivaldi.net/@yunima">
-                        <img src="vivaldi_logo_dark.png" alt="vivaldi social @yunima" class="vivaldi">
+                        <img src="images/vivaldi_logo_dark.png" alt="vivaldi social @yunima" class="vivaldi">
                     </a>
                 </div>
                 <div class="item-big">
@@ -59,7 +60,7 @@
 
                 <div class="item-picture">
                     <a href="https://cosmedn.net/@grimoa_blue">
-                        <img src="Mastodon_Logotype_(Simple).svg.png" alt="cosmedn.net @grimoa_blue">
+                        <img src="images/Mastodon_Logotype_(Simple).svg.png" alt="cosmedn.net @grimoa_blue">
                     </a>
                 </div>
                 <div class="item-big">
@@ -68,7 +69,7 @@
 
                 <div class="item-picture">
                     <a href="https://booklog.jp/users/junojuly9">
-                        <img src="book.png" alt="ブクログ @junojuly9">
+                        <img src="images/book.png" alt="ブクログ @junojuly9">
                     </a>
                 </div>
                 <div class="item-big">
@@ -77,7 +78,7 @@
 
                 <div class="item-picture">
                     <a href="https://github.com/yuni-tsuki">
-                        <img src="github-mark.png" alt="Github @yuni-tsuki">
+                        <img src="images/github-mark.png" alt="Github @yuni-tsuki">
                     </a>
                 </div>
                 <div class="item-big">
