--- a/index.html
+++ b/index.html
@@ -6,90 +6,80 @@
         <meta name="description" content="yunimaのプロフィールページ">
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link rel="stylesheet" href="style.css">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="icon" href="images/teapot-icon.png" type="image/x-icon" />
     </head>
     <body>
-        <div class="bgimage">
+        <div class="bg-img">
             <header>
                 <h1>yunima's page</h1>
             </header>
         
-            <div class="topcontent">
-                <h2>yunima's page</h2>
+            <div class="top-container">
+                <h1>yunima's page</h1>
                 <p>yunimaのプロフィールページへようこそ！</p>
             </div>
         </div>
 
-        <div class="maincontents">
+        <div class="main-container">
             <div class="profile">
-                <h2>yunima(Grimoa)</h2>
+                <h1>yunima(Grimoa)</h1>
                 <ul>X-gender</ul>
                 <ul>1998.7.9 生まれ</ul>
                 <ul>放送大学教養学部</ul>
             </div>
 
             <div class="link">
-                <div class="item-picture">
-                    <a href="https://www.instagram.com/grimoa_blue">
-                        <img src="images/Instagram_Glyph_Gradient.png" alt="Instagram @grimoa_blue">
-                    </a>
-                </div>
-                <div class="item-big">
-                    <p><a href="https://www.instagram.com/grimoa_blue">Instagram</a>のアカウントです。</p>
-                    <p>日常を投稿しています。</p>
-                </div>
+                <a href="https://www.instagram.com/grimoa_blue">
+                    <img src="images/Instagram_Glyph_Gradient.png" alt="Instagram @grimoa_blue">
+                </a>
+                <p>
+                    <a href="https://www.instagram.com/grimoa_blue">Instagram</a>のアカウントです。
+                    <br>日常を投稿しています。
+                </p>
 
-                <div class="item-picture">
-                    <a href="https://misskey.dev/@yunima">
-                        <img src="images/misskey_icon.png" alt="misskey.dev @yunima">
-                    </a>
-                </div>
-                <div class="item-big">
-                    <p><a href="https://misskey.dev/@yunima">Misskey.dev</a>のアカウントです。yunimaのメインアカウントです。</p>
-                </div>
-                
-                <div class="item-picture">
+                <a href="https://misskey.dev/@yunima">
+                    <img src="images/misskey_icon.png" alt="misskey.dev @yunima">
+                </a>
+                <p>
+                    <a href="https://misskey.dev/@yunima">Misskey.dev</a>のアカウントです。yunimaのメインアカウントです。
+                </p>
+                <div id="vertical-center-img">
                     <a rel="me" href="https://social.vivaldi.net/@yunima">
-                        <img src="images/vivaldi_logo_dark.png" alt="vivaldi social @yunima" class="vivaldi">
+                        <img src="images/vivaldi_logo_dark.png" alt="vivaldi social @yunima" >
                     </a>
                 </div>
-                <div class="item-big">
-                    <p>mastodonのサーバー、<a rel="me" href="https://social.vivaldi.net/@yunima">vivaldi social</a>のアカウントです。サブアカウントとして使用しています。</p>
-                </div>
+                <p>
+                    mastodonのサーバー、<a rel="me" href="https://social.vivaldi.net/@yunima">vivaldi social</a>のアカウントです。
+                    <br>サブアカウントとして使用しています。
+                </p>
 
-                <div class="item-picture">
-                    <a href="https://cosmedn.net/@grimoa_blue">
-                        <img src="images/Mastodon_Logotype_(Simple).svg.png" alt="cosmedn.net @grimoa_blue">
-                    </a>
-                </div>
-                <div class="item-big">
-                    <p>mastodonの美容サーバー、<a href="https://cosmedn.net/@grimoa_blue">cosmedn.net</a>のアカウントです。美容についてつぶやいています。</p>
-                </div>
+                <a href="https://cosmedn.net/@grimoa_blue">
+                    <img src="images/Mastodon_Logotype_(Simple).svg.png" alt="cosmedn.net @grimoa_blue">
+                </a>
+                <p>
+                    mastodonの美容サーバー、<a href="https://cosmedn.net/@grimoa_blue">cosmedn.net</a>のアカウントです。美容についてつぶやいています。
+                </p>
 
-                <div class="item-picture">
-                    <a href="https://booklog.jp/users/junojuly9">
-                        <img src="images/book.png" alt="ブクログ @junojuly9">
-                    </a>
-                </div>
-                <div class="item-big">
-                    <p>本好きが集まるSNS、<a href="https://booklog.jp/users/junojuly9">ブクログ</a>のアカウントです。読書記録をつけています。</p>
-                </div>
+                <a href="https://booklog.jp/users/junojuly9">
+                    <img src="images/book.png" alt="ブクログ @junojuly9">
+                </a>
+                <p>
+                    本好きが集まるSNS、<a href="https://booklog.jp/users/junojuly9">ブクログ</a>のアカウントです。読書記録をつけています。
+                </p>
 
-                <div class="item-picture">
-                    <a href="https://github.com/yuni-tsuki">
-                        <img src="images/github-mark.png" alt="Github @yuni-tsuki">
-                    </a>
-                </div>
-                <div class="item-big">
-                    <p><a href="https://github.com/yuni-tsuki">Github</a>です。</p>
-                    <p>制作物を投稿しています。</p>
-                </div>
+                <a href="https://github.com/yuni-tsuki">
+                    <img src="images/github-mark.png" alt="Github @yuni-tsuki">
+                </a>
+                <p>
+                    <a href="https://github.com/yuni-tsuki">Github</a>です。
+                    <br>制作物を投稿しています。
+                </p>
             </div>
         </div>
 
         <footer>
-            <p>Copyright 2023 yunima</p>
+            <small>Copyright 2023 yunima</small>
         </footer>
     </body>
 </html>
