--- a/index.html
+++ b/index.html
@@ -10,76 +10,78 @@
         <link rel="icon" href="images/teapot-icon.png" type="image/x-icon" />
     </head>
     <body>
-        <div class="bg-img">
-            <header>
-                <h1>yunima's page</h1>
-            </header>
+        <header>
+            <nav>
+                <ul>
+                    <li>About</li>
+                    <li>Skills</li>
+                    <li>Links</li>
+                </ul>
+            </nav>
+        </header>
+
+        <!--トップ-->
+        <p>Yunima</p>
         
-            <div class="top-container">
-                <h1>yunima's page</h1>
-                <p>yunimaのプロフィールページへようこそ！</p>
-            </div>
+        <!--概要-->
+        <div class="container-about">
+            <h1>yunima</h1>
+            <ul>
+                <li>X-gender</li>
+                <li>1998.7.9 生まれ</li>
+                <li>放送大学教養学部心理と教育コース在学中</li>
+                <li>Web corder</li>
+                <li>Osaka, Japan</li>
+                <li>lang: JP</li>
+                <li>contact: <a href="https://discordapp.com/users/gpqTnFzu**v$6V">Discord</a></li>
+            </ul>
         </div>
 
-        <div class="main-container">
-            <div class="profile">
-                <h1>yunima(Grimoa)</h1>
-                <ul>X-gender</ul>
-                <ul>1998.7.9 生まれ</ul>
-                <ul>放送大学教養学部</ul>
-            </div>
+        <!--スキル-->
+        <h1>Skills</h1>
+        <div class="container-skills">
+            <ul>
+                <li><img src="#" alt="HTML5"></li>
+                <li><img src="#" alt="Kotlin"></li>
+            </ul>
+            <ul>
+                <li>
+                    <ul>
+                        <li><img src="#" alt="CSS"></li>
+                        <li><img src="#" alt="JavaScript"></li>
+                        <li><img src="#" alt="jQuery"></li>
+                    </ul>
+                </li>
+                <li>
+                    <ul>
+                        <li><img src="#" alt="Jetpack Compose"></li>
+                        <li><img src="#" alt="Android Studio"></li>
+                    </ul>
+                </li>
+                <li>
+                    <ul>
+                        <li><img src="#" alt="VS Code"></li>
+                        <li><img src="#" alt="Github"></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
 
-            <div class="link">
-                <a href="https://www.instagram.com/grimoa_blue">
-                    <img src="images/Instagram_Glyph_Gradient.png" alt="Instagram @grimoa_blue">
-                </a>
-                <p>
-                    <a href="https://www.instagram.com/grimoa_blue">Instagram</a>のアカウントです。
-                    <br>日常を投稿しています。
-                </p>
-
-                <a href="https://misskey.dev/@yunima">
-                    <img src="images/misskey_icon.png" alt="misskey.dev @yunima">
-                </a>
-                <p>
-                    <a href="https://misskey.dev/@yunima">Misskey.dev</a>のアカウントです。yunimaのメインアカウントです。
-                </p>
-                <div id="vertical-center-img">
-                    <a rel="me" href="https://social.vivaldi.net/@yunima">
-                        <img src="images/vivaldi_logo_dark.png" alt="vivaldi social @yunima" >
-                    </a>
-                </div>
-                <p>
-                    mastodonのサーバー、<a rel="me" href="https://social.vivaldi.net/@yunima">vivaldi social</a>のアカウントです。
-                    <br>サブアカウントとして使用しています。
-                </p>
-
-                <a href="https://cosmedn.net/@grimoa_blue">
-                    <img src="images/Mastodon_Logotype_(Simple).svg.png" alt="cosmedn.net @grimoa_blue">
-                </a>
-                <p>
-                    mastodonの美容サーバー、<a href="https://cosmedn.net/@grimoa_blue">cosmedn.net</a>のアカウントです。美容についてつぶやいています。
-                </p>
-
-                <a href="https://booklog.jp/users/junojuly9">
-                    <img src="images/book.png" alt="ブクログ @junojuly9">
-                </a>
-                <p>
-                    本好きが集まるSNS、<a href="https://booklog.jp/users/junojuly9">ブクログ</a>のアカウントです。読書記録をつけています。
-                </p>
-
-                <a href="https://github.com/yuni-tsuki">
-                    <img src="images/github-mark.png" alt="Github @yuni-tsuki">
-                </a>
-                <p>
-                    <a href="https://github.com/yuni-tsuki">Github</a>です。
-                    <br>制作物を投稿しています。
-                </p>
-            </div>
+        <!--リンク-->
+        <h1>Links</h1>
+        <div class="container-skills">
+            <ul>
+                <li><a href="https://misskey.dev/@yunima">misskey.dev</a></li>
+                <li><a href="https://social.vivaldi.net/@yunima">Vivaldi Social</a></li>
+                <li><a href="https://ojousama-tea.party/@misono_yuni">ojousama-tea.party</a></li>
+                <li><a href="https://cosmedn.net/@grimoa_blue">cosmedn.net</a></li>
+                <li><a href="https://booklog.jp/users/junojuly9/profile">booklog.jp</a></li>
+                <li><a href="https://github.com/yuni-tsuki">Github</a></li>
+            </ul>
         </div>
 
         <footer>
-            <small>Copyright 2023 yunima</small>
+            <p>&copy;2025 yunima</p>
         </footer>
     </body>
 </html>
