--- a/index.html
+++ b/index.html
@@ -10,78 +10,78 @@
         <link rel="icon" href="images/teapot-icon.png" type="image/x-icon" />
     </head>
     <body>
-        <header>
-            <nav>
-                <ul>
-                    <li>About</li>
-                    <li>Skills</li>
-                    <li>Links</li>
+        <header class="header">
+            <nav class="header__nav">
+                <ul class="header__list">
+                    <li class="header__item-li"><a href="#" class="header__item-link">About</a></li>
+                    <li class="header__item-li"><a href="#" class="header__item-link">Skills</a></li>
+                    <li class="header__item-li"><a href="#" class="header__item-link">Links</a></li>
                 </ul>
             </nav>
         </header>
 
         <!--トップ-->
-        <p>Yunima</p>
+        <p class="top__body">Yunima</p>
         
         <!--概要-->
-        <div class="container-about">
-            <h1>yunima</h1>
-            <ul>
-                <li>X-gender</li>
-                <li>1998.7.9 生まれ</li>
-                <li>放送大学教養学部心理と教育コース在学中</li>
-                <li>Web corder</li>
-                <li>Osaka, Japan</li>
-                <li>lang: JP</li>
-                <li>contact: <a href="https://discordapp.com/users/gpqTnFzu**v$6V">Discord</a></li>
+        <div class="about__container">
+            <h1 class="about__item-title">yunima</h1>
+            <ul class="about__list">
+                <li class="about__item-li">X-gender</li>
+                <li class="about__item-li">1998.7.9 生まれ</li>
+                <li class="about__item-li">放送大学教養学部心理と教育コース在学中</li>
+                <li class="about__item-li">Web corder</li>
+                <li class="about__item-li">Osaka, Japan</li>
+                <li class="about__item-li">lang: JP</li>
+                <li class="about__item-li">contact: <a href="https://discordapp.com/users/gpqTnFzu**v$6V" class="about__item-li">Discord</a></li>
             </ul>
         </div>
 
         <!--スキル-->
-        <h1>Skills</h1>
-        <div class="container-skills">
-            <ul>
-                <li><img src="#" alt="HTML5"></li>
-                <li><img src="#" alt="Kotlin"></li>
+        <h1 class="skills__item-title">Skills</h1>
+        <div class="skills__container">
+            <ul class="skills__list skills__list__col-left">
+                <li class="skills__item-li"><img src="#" alt="HTML5" class="skills__item-link"></li>
+                <li class="skills__item-li"><img src="#" alt="Kotlin" class="skills__item-link"></li>
             </ul>
-            <ul>
-                <li>
-                    <ul>
-                        <li><img src="#" alt="CSS"></li>
-                        <li><img src="#" alt="JavaScript"></li>
-                        <li><img src="#" alt="jQuery"></li>
+            <ul class="skills__list skills__list__col-left">
+                <li class="skills__item-li">
+                    <ul class="skills__list skills__row-upper">
+                        <li class="skills__item-li"><img src="#" alt="CSS" class="skills__item-link"></li>
+                        <li class="skills__item-li"><img src="#" alt="JavaScript" class="skills__item-link"></li>
+                        <li class="skills__item-li"><img src="#" alt="jQuery" class="skills__item-link"></li>
                     </ul>
                 </li>
-                <li>
-                    <ul>
-                        <li><img src="#" alt="Jetpack Compose"></li>
-                        <li><img src="#" alt="Android Studio"></li>
+                <li class="skills__item-li">
+                    <ul class="skills__list skills__row-middle">
+                        <li class="skills__item-li"><img src="#" alt="Jetpack Compose" class="skills__item-link"></li>
+                        <li class="skills__item-li"><img src="#" alt="Android Studio" class="skills__item-link"></li>
                     </ul>
                 </li>
-                <li>
-                    <ul>
-                        <li><img src="#" alt="VS Code"></li>
-                        <li><img src="#" alt="Github"></li>
+                <li class="skills__item-li">
+                    <ul class="skills__list skills__row-lower">
+                        <li class="skils__item-li"><img src="#" alt="VS Code" class="skills__item-link"></li>
+                        <li class="skils__item-li"><img src="#" alt="Github" class="skills__item-link"></li>
                     </ul>
                 </li>
             </ul>
         </div>
 
         <!--リンク-->
-        <h1>Links</h1>
-        <div class="container-skills">
-            <ul>
-                <li><a href="https://misskey.dev/@yunima">misskey.dev</a></li>
-                <li><a href="https://social.vivaldi.net/@yunima">Vivaldi Social</a></li>
-                <li><a href="https://ojousama-tea.party/@misono_yuni">ojousama-tea.party</a></li>
-                <li><a href="https://cosmedn.net/@grimoa_blue">cosmedn.net</a></li>
-                <li><a href="https://booklog.jp/users/junojuly9/profile">booklog.jp</a></li>
-                <li><a href="https://github.com/yuni-tsuki">Github</a></li>
+        <h1 class="links__title">Links</h1>
+        <div class="links__container">
+            <ul class="links__list">
+                <li class="links__item-li"><a href="https://misskey.dev/@yunima" class="links__item-link">misskey.dev</a></li>
+                <li class="links__item-li"><a href="https://social.vivaldi.net/@yunima" class="links__item-link">Vivaldi Social</a></li>
+                <li class="links__item-li"><a href="https://ojousama-tea.party/@misono_yuni" class="links__item-link">ojousama-tea.party</a></li>
+                <li class="links__item-li"><a href="https://cosmedn.net/@grimoa_blue" class="links__item-link">cosmedn.net</a></li>
+                <li class="links__item-li"><a href="https://booklog.jp/users/junojuly9/profile" class="links__item-link">booklog.jp</a></li>
+                <li class="links__item-li"><a href="https://github.com/yuni-tsuki" class="links__item-link">Github</a></li>
             </ul>
         </div>
 
-        <footer>
-            <p>&copy;2025 yunima</p>
+        <footer class="footer">
+            <p class="footer__item-copyright">&copy;2025 yunima</p>
         </footer>
     </body>
 </html>
