微調整とcssロゴの入れ替え

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Shippori+Mincho&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="bg"></div>
+        
+        <div class="all__wrapper">
         <!--ヘッダー-->
         <header class="header">
             <nav class="header__nav">
@@ -91,7 +94,7 @@
                 <li class="links__item-li"><a href="https://social.vivaldi.net/@yunima" class="links__item-link">Vivaldi Social</a></li>
                 <li class="links__item-li"><a href="https://ojousama-tea.party/@misono_yuni" class="links__item-link">ojousama-tea.party</a></li>
                 <li class="links__item-li"><a href="https://cosmedn.net/@grimoa_blue" class="links__item-link">cosmedn.net</a></li>
-                <li class="links__item-li"><a href="https://booklog.jp/users/junojuly9/profile" class="links__item-link">booklog.jp</a></li>
+                <li class="links__item-li"><a href="https://booklog.jp/users/junojuly9" class="links__item-link">booklog.jp</a></li>
                 <li class="links__item-li"><a href="https://github.com/yuni-tsuki" class="links__item-link">Github</a></li>
             </ul>
         </div>
@@ -99,5 +102,6 @@
         <footer class="footer">
             <p class="footer__item-copyright">&copy;2025 yunima</p>
         </footer>
+        </div>
     </body>
 </html>
