スクリーンリーダー対応

--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
         </div>
 
         <!--スキル-->
-        <div class="skills__wrapper" id="skills-top">         
+        <div class="skills__wrapper" id="skills-top">
             <div class="skills__list__container">
+                <div class="skills__title__container">      
+                    <h1 class="skills__item-title"><span class="skills__calactor-big">S</span>kills</h1>
+                </div>
                 <ul class="skills__list skills__col-ul">
                     <li class="skills__col skills__col-li-left">
                         <ul class="skills__list skills__list__col skills__list__col-left">
@@ -83,7 +86,7 @@
                     </li>
                 </ul>
             </div>
-            <h1 class="skills__item-title"><span class="skills__calactor-big">S</span>kills</h1>
+            
         </div>
 
         <!--リンク-->
