キーボードフォーカスの対応

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <header class="header">
             <nav class="header__nav">
                 <ul class="header__list">
-                    <li class="header__item-li"><a href="#about-title" class="header__item-link">About</a></li>
-                    <li class="header__item-li"><a href="#skills-top" class="header__item-link">Skills</a></li>
-                    <li class="header__item-li"><a href="#links-title" class="header__item-link">Links</a></li>
+                    <li class="header__item-li"><a href="#about-title" class="header__item-link" tabindex="0">About</a></li>
+                    <li class="header__item-li"><a href="#skills-top" class="header__item-link" tabindex="0">Skills</a></li>
+                    <li class="header__item-li"><a href="#links-title" class="header__item-link" tabindex="0">Links</a></li>
                 </ul>
             </nav>
         </header>
@@ -44,7 +44,7 @@
                 <li class="about__item-li">Web corder</li>
                 <li class="about__item-li">Osaka, Japan</li>
                 <li class="about__item-li">lang: JP</li>
-                <li class="about__item-li">contact: <a href="https://discordapp.com/users/gpqTnFzu**v$6V" class="about__item-li">Discord</a></li>
+                <li class="about__item-li">contact: <a href="https://discordapp.com/users/gpqTnFzu**v$6V" class="about__item-li" tabindex="0">Discord</a></li>
             </ul>
         </div>
 
@@ -93,12 +93,12 @@
         <h1 class="links__title" id="links-title"><span class="links__calactor-big">L</span>inks</h1>
         <div class="links__container">
             <ul class="links__list">
-                <li class="links__item-li"><a href="https://misskey.dev/@yunima" class="links__item-link">misskey.dev</a></li>
-                <li class="links__item-li"><a href="https://social.vivaldi.net/@yunima" class="links__item-link">Vivaldi Social</a></li>
-                <li class="links__item-li"><a href="https://ojousama-tea.party/@misono_yuni" class="links__item-link">ojousama-tea.party</a></li>
-                <li class="links__item-li"><a href="https://cosmedn.net/@grimoa_blue" class="links__item-link">cosmedn.net</a></li>
-                <li class="links__item-li"><a href="https://booklog.jp/users/junojuly9" class="links__item-link">booklog.jp</a></li>
-                <li class="links__item-li"><a href="https://github.com/yuni-tsuki" class="links__item-link">Github</a></li>
+                <li class="links__item-li"><a href="https://misskey.dev/@yunima" class="links__item-link" tabindex="0">misskey.dev</a></li>
+                <li class="links__item-li"><a href="https://social.vivaldi.net/@yunima" class="links__item-link" tabindex="0">Vivaldi Social</a></li>
+                <li class="links__item-li"><a href="https://ojousama-tea.party/@misono_yuni" class="links__item-link" tabindex="0">ojousama-tea.party</a></li>
+                <li class="links__item-li"><a href="https://cosmedn.net/@grimoa_blue" class="links__item-link" tabindex="0">cosmedn.net</a></li>
+                <li class="links__item-li"><a href="https://booklog.jp/users/junojuly9" class="links__item-link" tabindex="0">booklog.jp</a></li>
+                <li class="links__item-li"><a href="https://github.com/yuni-tsuki" class="links__item-link" tabindex="0">Github</a></li>
             </ul>
         </div>
 
