--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <h1 class="links__title" id="links-title"><span class="links__calactor-big">L</span>inks</h1>
         <div class="links__container">
             <ul class="links__list">
+                <li class="links__item-li"><a href="https://www.instagram.com/grimoa_blue" class="links__item-link" tabindex="0">Instagram</a></li>
                 <li class="links__item-li"><a href="https://misskey.dev/@yunima" class="links__item-link" tabindex="0">misskey.dev</a></li>
                 <li class="links__item-li"><a href="https://social.vivaldi.net/@yunima" class="links__item-link" tabindex="0">Vivaldi Social</a></li>
                 <li class="links__item-li"><a href="https://ojousama-tea.party/@misono_yuni" class="links__item-link" tabindex="0">ojousama-tea.party</a></li>
